--- a/brocade_vtm/brocade_vtm.conf
+++ b/brocade_vtm/brocade_vtm.conf
@@ -4,5 +4,5 @@
 LoadPlugin exec
 
 <Plugin exec>
-  Exec "statsuser" "/usr/lib/collectd/plugins/brocade_vtm.rb" "--pool=<%= @pool_name %>" "--node" "--interval=10"
+  Exec "statsuser" "/usr/lib/collectd/plugins/brocade_vtm.rb" "--pool=appservers" "--node" "--interval=10"
 </Plugin>
